NEL: Don't crash on failed requests without response headers

Make sure we have response headers before trying to get the response
code. Also, add a unittest that uses an EmbeddedTestServer to make sure
we're exercising the interaction with URLRequestHttpJob. Also also,
convert some related Bind calls to BindRepeating.

Bug: 792971
Change-Id: I4e7dcde3526f137af032bc44b41bac085e201715
Reviewed-on: https://chromium-review.googlesource.com/814837
Commit-Queue: Julia Tuttle <juliatuttle@chromium.org>
Reviewed-by: Miriam Gershenson <mgersh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522873}
Former-commit-id: 7005a2a9e1910ed05362990cddc5be7973719e32